CDH-61195: Upgrade direct dependencies with security vulnerabilities: upgrade derby version to follow cdh.derby.version, remove commons-httpclient dependency from kite-app-parent-cdh4 pom file.

--- a/kite-data/kite-data-hive/pom.xml
+++ b/kite-data/kite-data-hive/pom.xml
@@ -160,7 +160,7 @@
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
-      <version>10.10.2.0</version>
+      <version>${vers.derby}</version>
     </dependency>
 
     <!-- for Hive tests -->
