CDH-62821 CDH-61222 CDH-61223 tika version update to 1.16 use the cdh.tika.version prop from cdh-root project this update was needed because an identified vulnerability in 1.13 version
test updated with new mimetypes:
 - mbox : https://issues.apache.org/jira/browse/TIKA-2042 mbox
 - wmf, bmp : https://issues.apache.org/jira/browse/TIKA-2250
 - wav : [NO TICKET] Canonical Mimetype of WAVE audio changed to match RFC 2361 defined version, audio/vnd.wave, older audio/x-wav remains as an alias

--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
     <vers.solr>${cdh.solr.version}</vers.solr>
     <solr.expected.version>${cdh.solr.version}</solr.expected.version> <!-- sanity check to verify we actually run against the expected version rather than some outdated version -->
     <vers.thrift>${cdh.thrift.version}</vers.thrift>
-    <vers.tika>1.13</vers.tika>
+    <vers.tika>${cdh.tika.version}</vers.tika>
     <vers.jackson>2.7.8</vers.jackson>
     <vers.jackson-hadoop>2.7.8</vers.jackson-hadoop>
     <vers.opencsv>2.3</vers.opencsv>
