--- a/kite-morphlines/kite-morphlines-core/src/test/resources/test-morphlines/solrCellDocumentTypes.conf
+++ b/kite-morphlines/kite-morphlines-core/src/test/resources/test-morphlines/solrCellDocumentTypes.conf
@@ -213,7 +213,7 @@ morphlines : [
                       { parser : org.gagravarr.tika.FlacParser }
                       { parser : org.apache.tika.parser.audio.AudioParser }                      
                       { parser : org.apache.tika.parser.audio.MidiParser }
-                      { parser : org.apache.tika.parser.crypto.Pkcs7Parser }
+                      #{ parser : org.apache.tika.parser.crypto.Pkcs7Parser }
                       { parser : org.apache.tika.parser.dwg.DWGParser }
                       { parser : org.apache.tika.parser.epub.EpubParser }
                       { parser : org.apache.tika.parser.executable.ExecutableParser }
